<resources>
    <string name="app_name">AndroidCalculator</string>
    <string name="ac">AC</string>
    <string name="zhengFu">±</string>
    <string name="chu">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtract">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="percentage">%</string>
    <string name="_0">0</string>
    <string name="amount">=</string>
    <string name="decimalPoint">.</string>
    <string name="zuoKuoHao">(</string>
    <string name="youKuoHao">)</string>
    <string name="genHao">√</string>
    <string name="x2">x²</string>
</resources>